# FUVS-IC-Anna-Luiza-Server

./: .gitignore  Cargo.toml  config.toml  rocket.toml  theme.go
benchmarks/: main.go
files/: test15.json  test39.json  test420.json
src/: defs.rs  main.rs  memory.rs
tests/: theme01.json
